# Soil-Moisture

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: soil_moisture_classifier.tflite  soil_type_classifier.tflite
scripts/: app.py  convert_moisture_to_tflite.py  convert_to_tflite.py  fertilizer_recommendation.py  soil_analysis_app.py  train_soil_moisture.py  train_soil_type.py
