[tool.poetry]
name = "soil-moisture"
version = "0.1.0"
description = "Soil Moisture Fertilizer Recommendation backend"
authors = ["Nilkamal21 <nilkamaladhikari2005@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
tensorflow-cpu = "2.20.0"
numpy = ">=2.1.0"
pandas = "^2.0.3"
opencv-python = "^4.8.0.76"
Pillow = "^10.2.0"
vosk = "^0.3.45"
gtts = "^2.4.0"
pyttsx3 = "^2.90"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
PyYAML = "^6.0"
SpeechRecognition = "*"
# pyaudio removed to avoid build errors

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
